Horizontal scroll fix

--- a/api/public/js/blather/src/css/app.css
+++ b/api/public/js/blather/src/css/app.css
@@ -14,7 +14,8 @@ body {
   overflow-y: scroll;
   padding: 0;
   position: relative;
-  -webkit-overflow-scrolling: touch; }
+  -webkit-overflow-scrolling: touch;
+  width: 100%; }
 
 .app {
   background: #F9FAFB !important; }
